Mudança de titulo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>JM Viagens - Home</title>
+		<title>Teste de Git - Home</title>
 		<meta charset="utf-8">
 	</head>
 	<body>
